<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fifteen Puzzle</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="title_activity_win">WinActivity</string>
    <string name="win">You solved\nFifteen Puzzle! \nYour moves count is \n </string>
    <string name="only_moves_word"> moves!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="sure_leave_puzzle">Are you sure you want to leave this game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="moves_count">Moves: </string>
    <string name="about_text">Fifteen Puzzle.\n Copyright © \nArtem Kalachyan.\n All right Reserved.\n Contact:\n</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="puzzle_size_textview_text">Puzzle size:</string>
    <string name="preferences">Settings</string>
    <string name="sounds_text_view">Sounds</string>
    <string name="title_activity_records">RecordsActivity</string>
	<string name="_3x3">3X3</string>
	<string name="_4x4">4X4</string>
	<string name="_5x5">5X5</string>
	<string name="_6x6">6X6</string>
	<string name="my_email"><u>bringoffart@gmail.com</u></string>
	<string name="send_email_chooser_title">Send email…</string>

</resources>
