<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_prefs_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="32dp">

		<TextView
			android:id="@+id/puzzle_size_textview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/puzzle_size_textview_text"
			android:textSize="32dp"
			android:textColor="@android:color/white" />

		<RadioGroup
			android:id="@+id/puzzle_size_radiogroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">

			<RadioButton
				android:id="@+id/rb3x3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/_3x3"
				android:textSize="32dp"
				android:textColor="@android:color/white" />

			<RadioButton
				android:id="@+id/rb4x4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/_4x4"
				android:checked="true"
				android:textSize="32dp"
				android:textColor="@android:color/white" />

			<RadioButton
				android:id="@+id/rb5x5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/_5x5"
				android:textSize="32dp"
				android:textColor="@android:color/white" />

			<RadioButton
				android:id="@+id/rb6x6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/_6x6"
				android:textColor="@android:color/white"
				android:textSize="32dp" />

		</RadioGroup>

	</LinearLayout>

	<CheckBox
		android:id="@+id/sounds_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:checked="true"
		android:text="@string/sounds_text_view"
		android:textColor="@android:color/white"
		android:textSize="32dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/activity_horizontal_margin"
		android:background="@android:color/white"
		android:orientation="horizontal">

		<Button
			android:id="@+id/button_orange"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/orange_cool"
			android:layout_margin="8dp"
			android:layout_weight="1"
			android:onClick="chooseColor"/>

		<Button
			android:id="@+id/button_blue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/blue_cool"
			android:layout_margin="8dp"
			android:layout_weight="1"
			android:onClick="chooseColor"/>
		<Button
			android:id="@+id/button_green"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/green_cool"
			android:layout_margin="8dp"
			android:layout_weight="1"
			android:onClick="chooseColor"/>

		<Button
			android:id="@+id/button_red"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/red_cool"
			android:layout_margin="8dp"
			android:layout_weight="1"
			android:onClick="chooseColor"/>

		<Button
			android:id="@+id/button_violet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:background="@color/violet_cool"
			android:layout_weight="1"
			android:onClick="chooseColor"/>
	</LinearLayout>

</LinearLayout>