<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:id="@+id/menu_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:gravity="center"
	android:background="@color/orange_cool">

	<Button
		android:id="@+id/button_new_game"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/new_game"
		android:textColor="@android:color/white"
		android:paddingBottom="16dp"
		android:paddingTop="16dp"
		android:textSize="36sp"/>

	<Button
		android:id="@+id/button_preferences"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/preferences"
		android:textColor="@android:color/white"
		android:paddingTop="16dp"
		android:paddingBottom="16dp"
		android:textSize="36sp"/>

	<Button
		android:id="@+id/button_about"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about"
		android:textColor="@android:color/white"
		android:paddingTop="16dp"
		android:paddingBottom="16dp"
		android:textSize="36sp"/>
</LinearLayout>