<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/win_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/orange_cool"
	android:padding="32dp"
	tools:context="ua.bringoff.developer.fifteenpuzzle.WinActivity">

	<TextView
		android:id="@+id/win_text"
		android:text="@string/win"
		android:textSize="@dimen/win_font_size"
		android:textColor="@android:color/white"
		android:gravity="center"
		android:layout_gravity="center_horizontal"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="4"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1"
		android:padding="8dp">

		<Button
			android:id="@+id/retry_button"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:textColor="@android:color/white"
			android:textSize="@dimen/button_font_size"
			android:text="@string/retry"
			android:layout_weight="1"
			android:background="@color/orange_cool"/>

		<Button
			android:id="@+id/exit_button"
			android:layout_width="wrap_content"
			android:layout_height="64dp"
			android:textSize="@dimen/button_font_size"
			android:text="@string/exit"
			android:textColor="@android:color/white"
			android:background="@color/orange_cool"
			android:layout_weight="1"/>

	</LinearLayout>

</LinearLayout>
